Added few things to acomodate the updates in the front end

--- a/clients/rcadmin/src/app/pages/dashboard/dashboard.component.html
+++ b/clients/rcadmin/src/app/pages/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div class="w-full h-full flex">
   <div class="w-9/12">
-    <app-map></app-map>
+    <ng-container *ngIf="stores">
+      <app-map [stores]="stores"></app-map>
+    </ng-container>
   </div>
   <div class="w-3/12 h-full bg-slate-100 overflow-x-auto">
     <div matSubheader class="flex items-center justify-between">
-      <h2>
-        Categories
-      </h2>
+      <h2>الطلبات</h2>
 
       <button mat-icon-button class="float-right" color="primary">
         <mat-icon>add</mat-icon>
@@ -29,7 +29,6 @@
           </button>
         </div>
       </mat-list-item>
-
     </mat-list>
   </div>
 </div>
