--- a/clients/rcadmin/src/app/pages/stores/store-form/store-form.component.html
+++ b/clients/rcadmin/src/app/pages/stores/store-form/store-form.component.html
@@ -11,6 +11,18 @@
 
       <div class="w-1/2 p-3">
         <mat-form-field>
+          <mat-label> مقدم المنتج </mat-label>
+          <mat-select formControlName="worker">
+            <mat-option *ngFor="let user of clients$ | async" [value]="user.id">
+              {{ user.name }}
+            </mat-option>
+
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div class="w-1/2 p-3">
+        <mat-form-field>
           <mat-label>التفاصيل</mat-label>
           <input matInput type="text" formControlName="details" />
         </mat-form-field>
