--- a/clients/rcadmin/src/app/ui/nav/nav.component.html
+++ b/clients/rcadmin/src/app/ui/nav/nav.component.html
@@ -7,13 +7,19 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="(isHandset$ | async) === false"
   >
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>Hanaye</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item [routerLink]="['', 'dashboard']">لوحة التحكم</a>
       <a mat-list-item [routerLink]="['', 'stores']">المتاجر</a>
-      <a mat-list-item [routerLink]="['', 'products']">المنجات</a>
+      <a mat-list-item [routerLink]="['', 'products']">المنتجات</a>
       <a mat-list-item [routerLink]="['', 'users']">المستخدمون</a>
     </mat-nav-list>
+
+    <div>
+      <button  mat-icon-button>
+        <mat-icon>logout</mat-icon>
+      </button>
+    </div>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="clear">
@@ -29,7 +35,13 @@
       <span>RCAdmin</span>
       <span class="flex-auto"></span>
       <div class="flex items-center gap-2">
-        <img src="assets/holders/user.png" width="48" height="48" alt="user profile" class="rounded-full">
+        <img
+          src="assets/holders/user.png"
+          width="48"
+          height="48"
+          alt="user profile"
+          class="rounded-full"
+        />
         <div class="flex flex-col justify-center">
           <span class="text-lg">Mahmoud</span>
           <span class="text-sm text-neutral-500">Admin</span>
