Added fav capabilities

--- a/clients/hanaye/src/app/login/login.page.html
+++ b/clients/hanaye/src/app/login/login.page.html
@@ -1,12 +1,10 @@
-<ion-header>
-  <ion-toolbar>
+<ion-content>
+  <div>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/tabs/home"></ion-back-button>
     </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+  </div>
 
-<ion-content>
   <div class="flex flex-col items-center m-5">
     <div class="w-60">
       <ion-img src="assets/logos/logo.png"></ion-img>
@@ -53,7 +51,7 @@
       >
 
       <ion-text>{{ 'REGISTRATION.NOACCOUNT' | translate}}</ion-text>
-      <a routerLink="/register" fill="clear"
+      <a routerLink="/register" fill="clear" class="text-purple-950"
         >{{ 'REGISTRATION.REGISTER' | translate }}</a
       >
 
