--- a/clients/hanaye/src/app/app.component.html
+++ b/clients/hanaye/src/app/app.component.html
@@ -10,13 +10,13 @@
     <ion-content>
       <ion-list>
         <ion-menu-toggle>
-          <ion-item lines="none" [routerLink]="['/', 'tabs', 'home']" button>
+          <ion-item lines="none" [routerLink]="['', 'tabs', 'home']" button>
             <ion-icon name="business" slot="start"></ion-icon>
             <ion-label>{{ 'NAV.HOME' | translate }}</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item lines="none" [routerLink]="['/', 'favorites']" button>
+          <ion-item lines="none" [routerLink]="['', 'favorites']" button>
             <ion-icon name="checkbox-outline" slot="start"></ion-icon>
             <ion-label>{{ 'NAV.FAVS' | translate }}</ion-label>
           </ion-item>
