--- a/clients/hanaye/src/app/pages/favorites/favorites.page.html
+++ b/clients/hanaye/src/app/pages/favorites/favorites.page.html
@@ -1,41 +1,53 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <div slot="start" class="bg-white rounded-lg">
+      <ion-buttons>
+        <ion-menu-button> </ion-menu-button>
+      </ion-buttons>
+    </div>
+
     <ion-title>{{ 'NAV.FAVS' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
   <ion-list>
     <ion-list-header>
-      <h2>Favorite Services</h2>
+      <ion-text> {{ 'NAV.FAVS' | translate }} </ion-text>
     </ion-list-header>
 
-    <ion-item-sliding *ngFor="let item of favorites.items" #slidingItem>
+    <ng-container *ngIf="favorites">
+      <ion-item-sliding *ngFor="let item of favorites.items" #slidingItem>
+        <ion-item detail>
+          <ion-thumbnail slot="start">
+            <ion-img
+              [src]="item.product!.image ?? 'assets/holders/category.jpg' "
+            ></ion-img>
+          </ion-thumbnail>
 
-      <ion-item detail>
-        <ion-thumbnail slot="start">
-          <ion-img [src]="item.product!.image ?? 'assets/holders/category.jpg' "></ion-img>
-        </ion-thumbnail>
+          <ion-label>
+            <h3>{{ item.product!.title }}</h3>
+            <p>{{ item.product!.details }}</p>
+          </ion-label>
+        </ion-item>
 
-        <ion-label>
-          <h3>{{ item.product!.title }}</h3>
-          <p>{{ item.product!.details }}</p>
-        </ion-label>
-      </ion-item>
-
-      <ion-item-options side="end">
-        <ion-item-option color="secondary" (click)="requestService(item.serviceId, slidingItem)">
-          <ion-icon name="create" slot="icon-only"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-      <ion-item-options side="start">
-        <ion-item-option color="danger" (click)="removeFromFav(item.serviceId, slidingItem)">
-          <ion-icon name="trash" slot="icon-only"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-
+        <ion-item-options side="end">
+          <ion-item-option
+            color="secondary"
+            (click)="requestService(item.productId, slidingItem)"
+          >
+            <ion-icon name="create" slot="icon-only"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+        <ion-item-options side="start">
+          <ion-item-option
+            color="danger"
+            (click)="removeFromFav(item.productId, slidingItem)"
+          >
+            <ion-icon name="trash" slot="icon-only"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ng-container>
   </ion-list>
-
 </ion-content>
