--- a/clients/hanaye/src/app/pages/tabs/home/home.page.html
+++ b/clients/hanaye/src/app/pages/tabs/home/home.page.html
@@ -1,17 +1,15 @@
 <ion-content [fullscreen]="true">
   <div class="relative p-5 min-h-screen bg-neutral-100">
     <ion-toolbar color="clear">
-      <div slot="start" class="bg-white rounded-lg">
+      <div slot="start" class="bg-white dark:bg-neutral-700 rounded-lg">
         <ion-buttons>
-          <ion-menu-button>
-            <ion-icon name="heart" size="large" color="danger"></ion-icon>
-          </ion-menu-button>
+          <ion-menu-button> </ion-menu-button>
         </ion-buttons>
       </div>
-      <div class="text-center">
-        <ion-title> {{ 'TABS.HOME' | translate}} </ion-title>
+      <div class="text-center text-neutral-900 dark:text-white">
+        <ion-title> {{ 'APP_NAME' | translate}} </ion-title>
       </div>
-      <div slot="end">
+      <!-- <div slot="end">
         <img
           class="p-3"
           src="assets/holders/user.jpg"
@@ -19,37 +17,142 @@
           class="rounded-full"
           alt=""
         />
-      </div>
+      </div> -->
     </ion-toolbar>
 
     <!-- Greetings -->
-    <div class="my-10">
+    <!-- <div class="my-10">
       <span class="text-5xl text-neutral-600 font-thin">
         {{ 'HOME.HELLO' | translate }} </span
       ><span class="text-5xl text-neutral-800"></span>
       <p class="text-neutral-400">{{ 'HOME.MESSAGE' | translate }}</p>
-    </div>
+    </div> -->
 
     <!-- Most popular -->
-    <div class="relative my-10 h-auto">
+    <!-- <div>
       <app-popular-products></app-popular-products>
-    </div>
+    </div> -->
 
-    <!-- Products -->
-    <ng-template #loadingHomeProducts>
-      <app-loading></app-loading>
+    <ng-template #loadingProfiles>
+      <div class="p-10">
+        <app-loading></app-loading>
+      </div>
     </ng-template>
 
+    <ng-container *ngIf="users$ |async as users; else loadingProfiles">
+      <div class="flex -m-4 mt-5 overflow-auto">
+        <div
+          *ngFor="let item of users"
+          class="min-w-min w-3/5 lg:mb-0 mb-6 p-4"
+          [routerLink]="['', 'tabs', 'products', 'providers', item.id]"
+          [state]="item"
+        >
+          <div class="h-full text-center">
+            <img
+              alt="testimonial"
+              class="w-40 min-w-[160px] h-40 mb-1 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100"
+              [src]="item.image"
+            />
+            <!-- <p class="leading-relaxed">{{ item. }}</p> -->
+
+            <span
+              class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"
+            ></span>
+            <h2
+              class="text-gray-900 font-medium title-font tracking-wider text-sm capitalize"
+            >
+              {{ item.name }}
+            </h2>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+
     <ng-container
-      *ngIf="products$ | async as products; else loadingHomeProducts"
-    ></ng-container>
-    <div class="flex flex-wrap">
+      *ngIf="products; else loadingHomeProducts"
+    >
+      <div class="flex overflow-auto gap-9 my-5">
+        <div
+          *ngFor="let item of products"
+          class="border bg-white rounded-lg w-2/3 min-w-[66%] flex flex-col justify-center items-center"
+        >
+          <div class="p-3">
+            <img class="rounded-xl my-3 w-52 h-52" [src]="item.image" alt="" />
+          </div>
+          <div class="self-start flex justify-between w-full px-3 mb-3">
+            <div>
+              <h3>{{ item.title }}</h3>
+              <p>{{ item.price }}</p>
+            </div>
+            <div
+              class="flex flex-col items-center"
+              [routerLink]="['', 'tabs', 'products', 'store', item.store.id]"
+            >
+              <img
+                width="38"
+                height="38"
+                class="rounded-full border border-rose-300"
+                src="assets/holders/store.png"
+                alt=""
+              />
+              <h3 class="text-neutral-600">{{ item.store.name }}</h3>
+            </div>
+            <!-- <ion-button
+              [routerLink]="['', 'tabs', 'products', 'store', item.store.id]"
+              ></ion-button
+            > -->
+          </div>
+        </div>
+      </div>
+    </ng-container>
+
+    <!-- Products -->
+    <div class="my-5">
+      <ng-template #loadingHomeProducts>
+        <app-loading></app-loading>
+      </ng-template>
+
+      <ng-container
+        *ngIf="products; else loadingHomeProducts"
+      >
+        <ion-list>
+          <ion-item
+            *ngFor="let item of products"
+            [routerLink]="['', 'tabs', 'products', 'details', item.id]"
+            detail
+          >
+          <ion-fab horizontal="end" vertical="top">
+            <ion-fab-button color="light">
+              <ion-icon
+                [color]="item.isfavorite ? 'danger' : 'dark'"
+                name="heart"
+                (click)="addToFav(item)"
+              ></ion-icon>
+            </ion-fab-button>
+          </ion-fab>
+          <ion-thumbnail style="width: 144px; height: 144px">
+              <ion-img [src]="item.image"></ion-img>
+            </ion-thumbnail>
+            <div class="mx-3 w-full flex justify-between items-center">
+              <div>
+                <h3 class="text-lg">{{ item.title }}</h3>
+                <span class="text-neutral-600">{{ item.price }}</span>
+              </div>
+              <!-- <div>
+                <ion-button>{{ 'HOME.MORE' | translate }}</ion-button>
+              </div> -->
+            </div>
+          </ion-item>
+        </ion-list>
+      </ng-container>
+    </div>
+    <!-- <div class="flex flex-wrap">
       <app-product-item
         *ngFor="let item of products$ | async; let i = index"
         [product]="item"
         class="w-1/2"
         [even]="i % 2 === 0"
       ></app-product-item>
-    </div>
+    </div> -->
   </div>
 </ion-content>
