--- a/clients/hanaye/src/app/pages/tabs/home/popular-products/popular-products.component.html
+++ b/clients/hanaye/src/app/pages/tabs/home/popular-products/popular-products.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center">
+<!-- <div class="my-5 flex justify-between items-center">
   <h1 class="text-lg font-semibold">
     {{ "HOME.FOR_YOU" | translate }}
   </h1>
@@ -18,25 +18,36 @@
   <app-loading></app-loading>
 </ng-template>
 
-<ng-container *ngIf="products$ | async as products; else loadingSlider">
-  <swiper-container
-    class="mySwiper"
-    pagination="true"
-    effect="coverflow"
-    grab-cursor="true"
-    centered-slides="true"
-    slides-per-view="auto"
-    coverflow-effect-rotate="50"
-    coverflow-effect-stretch="0"
-    coverflow-effect-depth="100"
-    coverflow-effect-modifier="1"
-    coverflow-effect-slide-shadows="true"
-  >
-    <swiper-slide
-      *ngFor="let item of products"
-      [routerLink]="['', 'tabs', 'products', 'details', item.id]"
-    >
-      <img [src]="item.image" />
+<swiper-container
+  slides-per-view="1.3"
+  space-between="30"
+  speed="500"
+  loop="true"
+  pagination="true"
+  pagination-dynamic-bullets="true"
+  css-mode="true"
+  navigation="false"
+>
+  <ng-container *ngIf="products$ | async as products; else loadingSlider">
+
+    <swiper-slide *ngFor="let item of products">
+      <div
+        class="border bg-white flex flex-col justify-center items-center"
+      >
+        <div>
+          <img
+            class="rounded-xl my-3 w-52 h-52"
+            [src]="item.image"
+            alt=""
+          />
+        </div>
+        <div class="text-center my-3">
+          <h3>{{ item.title }}</h3>
+          <ion-button class="text-neutral-600 text-lg" [routerLink]="['', 'tabs', 'products', 'store', item.store.id]">{{ item.store.name }}</ion-button>
+          <p>{{ item.price }}</p>
+        </div>
+      </div>
     </swiper-slide>
-  </swiper-container>
-</ng-container>
+
+  </ng-container>
+</swiper-container> -->
