--- a/clients/hanaye/src/app/shared/product-item/product-item.component.html
+++ b/clients/hanaye/src/app/shared/product-item/product-item.component.html
@@ -1,20 +1,20 @@
-<div [class]="'p-3 flex ' +( even ? 'flex-col-reverse' : 'flex-col')">
+<div [class]="'p-3 flex border border-neutral-400 rounded-xl bg-white ' +( even ? 'flex-col-reverse' : 'flex-col')">
 
-  <div class="relative p-1">
-    <img [routerLink]="['', 'tabs', 'products', 'details', product.id]" class="w-full rounded-lg" [src]="product.image" />
+  <div class="relative bg-blue-200 p-1 rounded-lg">
+    <img [routerLink]="['', 'tabs', 'products', 'details', product.id]" class="w-52 h-36 rounded-lg" [src]="product.image" />
     <div [class]="'flex justify-center items-center absolute top-2 right-2 p-1 rounded-md ' + (isFavorite ? 'bg-gray-100' : 'bg-gray-500')">
       <ion-icon name="heart" [color]="isFavorite ? 'danger' : 'light'" (click)="isFavorite = !isFavorite"></ion-icon>
     </div>
   </div>
 
-  <div class="flex flex-col my-3">
+  <div class="flex flex-col items-center my-3">
     <h2 class="text-lg">
       {{ product.title }}
     </h2>
-    <span class="text-neutral-500 text-md">
+    <span [routerLink]="['', 'tabs', 'products', 'store', product.store.id]" class="text-neutral-700 text-md">
       {{ product.store.name }}
     </span>
-    <ion-button>{{ 'HOME.REQUEST' | translate }}</ion-button>
+    <ion-button class="w-2/3">{{ 'HOME.REQUEST' | translate }}</ion-button>
   </div>
 
 </div>
