--- a/clients/hanaye/src/app/shared/loading/loading.component.html
+++ b/clients/hanaye/src/app/shared/loading/loading.component.html
@@ -2,6 +2,6 @@
   class="flex flex-col justify-center items-center my-5"
 >
   <div
-    class="border-t-transparent border-solid animate-spin rounded-full border-blue-400 border-8 h-64 w-64"
+    [class]="'border-t-transparent border-solid animate-spin rounded-full border-blue-400 border-8 ' + color + ' ' + size"
   ></div>
 </div>
