--- a/clients/hanaye/src/app/pages/tabs/products/providers/providers.component.html
+++ b/clients/hanaye/src/app/pages/tabs/products/providers/providers.component.html
@@ -20,7 +20,7 @@
       </div>
       <img *ngIf="store" class="xl:w-1/4 lg:w-1/3 md:w-1/2 w-full mt-5 block mx-auto mb-10 object-cover object-center rounded" alt="hero" [src]="store.image">
       <ng-template #loadingStore>
-        <app-loading></app-loading>
+        <app-loading size="w-8 h-8"></app-loading>
       </ng-template>
       <div *ngIf="store; else loadingStore" class="flex flex-col text-center w-full">
         <h1 class="text-xl font-medium title-font mb-4 text-gray-900">{{ store.name }}</h1>
