Final touches and tieing loss ends

--- a/clients/rcadmin/src/app/pages/dashboard/dashboard.component.html
+++ b/clients/rcadmin/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full flex">
+<div class="w-full flex" style="height: calc(100vh - 64px);">
   <div class="w-9/12">
     <ng-container *ngIf="stores">
       <app-map [stores]="stores"></app-map>
