--- a/clients/rcadmin/src/app/pages/products/products.component.html
+++ b/clients/rcadmin/src/app/pages/products/products.component.html
@@ -49,7 +49,7 @@
           <button [routerLink]="['', 'products', 'form', element.id]" mat-icon-button matListItemMeta>
             <mat-icon color="primary">info</mat-icon>
           </button>
-          <button mat-icon-button matListItemMeta>
+          <button (click)="deleteProduct(element)" mat-icon-button matListItemMeta>
             <mat-icon color="warn">delete</mat-icon>
           </button>
         </td>
@@ -103,8 +103,17 @@
               -- Wikipedia
             </span>
           </div> -->
-            <div>
+            <div class="flex justify-between bg-neutral-200 w-full">
               <img src="assets/holders/service.jpg" alt="" width="256" />
+              <div class="flex flex-col mx-5">
+                <span class="text-2xl">{{ element.title }}</span>
+                <span class="text-neutral-700">{{ element.store.name }}</span>
+                <span class="text-neutral-700">{{ element.createdAt | date }}</span>
+
+              </div>
+              <div class="flex-1 p-3">
+                {{element.details}}
+              </div>
             </div>
           </div>
         </td>
