--- a/clients/rcadmin/src/app/ui/nav/nav.component.html
+++ b/clients/rcadmin/src/app/ui/nav/nav.component.html
@@ -1,7 +1,19 @@
+<div class="fixed top-0 rtl:right-3 ltr:left-3 bg-transparent z-10 bg-neutral-100 rounded-full">
+  <button
+    type="button"
+    aria-label="Toggle sidenav"
+    mat-icon-button
+    (click)="drawer.toggle()"
+    *ngIf="isHandset$ | async"
+  >
+    <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+  </button>
+</div>
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav
     #drawer
     class="sidenav"
+    style="z-index: 200;"
     fixedInViewport
     [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
@@ -22,16 +34,7 @@
     </div>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="clear">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async"
-      >
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
+    <!-- <mat-toolbar class="sticky top-0" color="primary">
       <span>RCAdmin</span>
       <span class="flex-auto"></span>
       <div class="flex items-center gap-2">
@@ -42,19 +45,12 @@
           alt="user profile"
           class="rounded-full"
         />
-        <div class="flex flex-col justify-center">
-          <span class="text-lg">Mahmoud</span>
-          <span class="text-sm text-neutral-500">Admin</span>
+        <div class="flex flex-col justify-center items-center">
+          <span class="text-lg text-white">Mahmoud</span>
+          <span class="text-sm text-neutral-200">Admin</span>
         </div>
       </div>
-      <!-- <button
-        mat-icon-button
-        class="example-icon favorite-icon"
-        aria-label="Example icon-button with heart icon"
-      >
-        <mat-icon>favorite</mat-icon>
-      </button> -->
-    </mat-toolbar>
+    </mat-toolbar> -->
     <!-- Add Content Here -->
     <ng-content></ng-content>
   </mat-sidenav-content>
