Commiting hp changes

--- a/clients/hanaye/src/app/login/login.page.html
+++ b/clients/hanaye/src/app/login/login.page.html
@@ -15,7 +15,7 @@
         <ion-item>
           <!-- <ion-label position="floating">{{ 'REGISTRATION.USERNAME' | translate }}</ion-label> -->
           <ion-input
-            label="{{ 'REGISTRATION.USERNAME' | translate }}"
+            label="{{ 'REGISTRATION.PHONE' | translate }}"
             labelPlacement="floating"
             formControlName="phone"
             type="tel"
