--- a/clients/hanaye/src/app/pages/tabs/home/home.page.html
+++ b/clients/hanaye/src/app/pages/tabs/home/home.page.html
@@ -34,7 +34,7 @@
     </div> -->
 
     <!-- Search -->
-    <div class="mx-3 my-5 bg-inherit">
+    <!-- <div class="mx-3 my-5 bg-inherit">
       <ion-input
         labelPlacement="floating"
         fill="outline"
@@ -42,10 +42,10 @@
       >
         <div slot="label">{{ 'HOME.SEARCH_LABEL' | translate }}</div>
       </ion-input>
-    </div>
+    </div> -->
 
     <!-- Providers -->
-    <div class="mx-5 my-3">
+    <div class="mx-5 my-5">
       <h3 class="text-neutral-700 text-xl">{{ 'HOME.HEADERS.PROVIDERS' | translate }}</h3>
     </div>
     <ng-template #loadingProfiles>
@@ -84,7 +84,7 @@
     </ng-container>
 
     <!-- Featured products -->
-    <div class="mx-5 my-3">
+    <div class="mx-5 my-5">
       <h3 class="text-neutral-700 text-xl">{{ 'HOME.HEADERS.FEATS' | translate }}</h3>
     </div>
     <ng-container
