--- a/clients/hanaye/src/app/register/register.page.html
+++ b/clients/hanaye/src/app/register/register.page.html
@@ -55,12 +55,9 @@
         >
       </div>
 
-      <div class="text-neutral-600 text-center">
-        <p>
-          {{ 'REGISTRATION.NOACCOUNT' | translate}}
-        </p>
-
-        <a routerLink="/login" fill="clear" class="text-neutral-900 font-semibold"
+      <div class="text-center">
+        <ion-text>{{ 'REGISTRATION.ACCOUNT' | translate}}</ion-text>
+        <a routerLink="/login" fill="clear" class="text-purple-950"
           >{{ 'REGISTRATION.LOGIN' | translate }}</a
         >
       </div>
