Preparation for ios upload

--- a/clients/hanaye_mobile/src/app/pages/tabs/products/details/details.component.html
+++ b/clients/hanaye_mobile/src/app/pages/tabs/products/details/details.component.html
@@ -29,8 +29,16 @@
 
       </div>
 
-      <ion-button [href]="'tel:'+product.store.worker?.phone">{{ 'HOME.REQUEST' | translate }}</ion-button>
+      <ion-button [href]="'https://wa.me/222'+product.store.worker?.phone" target="_blank" color="success">
+        <ion-icon name="logo-whatsapp"></ion-icon>
+        <!-- {{ 'HOME.REQUEST' | translate }} -->
+      </ion-button>
+      <ion-button *ngIf="!platform.is('ios')" [href]="'tel:'+product.store.worker?.phone">
+        <!-- {{ 'HOME.REQUEST' | translate }} -->
+        <ion-icon name="call-outline"></ion-icon>
+      </ion-button>
       <div class="my-2 w-full">
+
       </div>
 
       <div class="my-5 p-3 border h-20">
