--- a/clients/hanaye_mobile/src/app/pages/tabs/home/home.page.html
+++ b/clients/hanaye_mobile/src/app/pages/tabs/home/home.page.html
@@ -62,7 +62,7 @@
           [routerLink]="['', 'tabs', 'products', 'providers', item.id]"
           [state]="item"
         >
-          <div class="h-full flex flex-col justify-center items-center">
+          <div class="h-full flex flex-col items-center">
             <img
               alt="testimonial"
               class="w-40 min-w-[160px] h-40 mb-1 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100"
